--- a/ksops/app.yaml
+++ b/ksops/app.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: ksops
-  namespace: default
+  namespace: argocd
 spec:
   # The project the application belongs to.
   project: default
