Add finalizer to delete cascading

--- a/ksops/app.yaml
+++ b/ksops/app.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: ksops
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   # The project the application belongs to.
   project: default
